argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true" # Якщо хочете, щоб Argo сам рулив SSL
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.localhost
  rules:
  - host: argocd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80 # Ми використовуємо порт 80, бо ArgoCD всередині кластера може приймати HTTP
